--- a/wercker.yml
+++ b/wercker.yml
@@ -26,6 +26,8 @@ build:
     - npm-install
     # A step that executes `npm test` command
     - npm-test
+    # A step that executes `npm run lint` command
+    - npm-run-lint
 
     # A custom script step, name value is used in the UI
     # and the code value contains the command that get executed
@@ -34,7 +36,3 @@ build:
         code: |
           echo "node version $(node -v) running"
           echo "npm version $(npm -v) running"
-    -script:
-        name: run linters
-        code: |
-          npm run lint
