Convert App.jsx to use styled components (#1)
* Converted App.jsx to use styled components

* Fix werker errors

* Configure wercker for eslint and stylelint

--- a/wercker.yml
+++ b/wercker.yml
@@ -24,8 +24,7 @@ build:
   steps:
     # A step that executes `npm install` command
     - npm-install
-    # A step that executes `npm test` command
-    - npm-test
+
 
     # A custom script step, name value is used in the UI
     # and the code value contains the command that get executed
@@ -37,5 +36,6 @@ build:
     - script:
         name: run linters
         code: |
-          eslint --ext .jsx --ext .js src
-          stylelint "**/*.css" "**/*.js" "**/*.jsx"
+          npm run eslint
+          npm run stylelint
+
