--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@storybook/react": "^5.1.11",
+    "babel-loader": "^8.0.6",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^5.16.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
