--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
     "eslint": "^5.16.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
