--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@storybook/react": "^5.1.11",
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^5.16.0",
+    "webpack": "4.39.1",
+    "eslint": "^6.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
