--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@storybook/react": "^5.1.11",
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
+    "prop-types": "^15.7.2",
     "webpack": "4.39.1",
     "eslint": "^6.1.0",
     "react": "^16.9.0",
