--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@storybook/react": "^5.1.11",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.1.1",
     "styled-components": "^4.3.2"
   },
@@ -56,8 +58,8 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-links": "^5.1.11",
     "@storybook/addon-info": "^5.1.11",
+    "@storybook/addon-links": "^5.1.11",
     "eslint": "^6.2.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
