--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@storybook/react": "^5.1.11",
-    "prop-types": "^15.7.2",
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
     "eslint": "^6.1.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-burger-menu": "^2.6.11",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-router-hash-link": "^1.2.2",
