--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-responsive-simple": "^0.1.2",
     "react-router-dom": "^5.0.1",
     "react-router-hash-link": "^1.2.2",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^3.1.1",
     "styled-components": "^4.3.2"
   },
   "scripts": {
