--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "eslint": "^6.2.1",
     "eslint-loader": "^2.2.1",
     "prop-types": "^15.7.2",
+    "pure-react-carousel": "^1.21.2",
     "react": "^16.9.0",
     "react-burger-menu": "^2.6.11",
     "react-dom": "^16.9.0",
     "react-responsive-simple": "^0.1.2",
     "react-router-dom": "^5.0.1",
     "react-router-hash-link": "^1.2.2",
-    "pure-react-carousel": "^1.21.2",
     "react-scripts": "^3.1.1",
+    "spec-react-scripts": "^3.1.1",
     "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp build/static/css/main.*.css style.css; cp build/static/js/main.*.js render.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
