--- a/package.json
+++ b/package.json
@@ -5,20 +5,19 @@
   "dependencies": {
     "@babel/runtime": "^7.5.5",
     "@storybook/react": "^5.1.11",
-    "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
     "eslint": "^6.2.1",
     "eslint-loader": "^2.2.1",
     "prop-types": "^15.7.2",
+    "pure-react-carousel": "^1.21.2",
     "react": "^16.9.0",
     "react-burger-menu": "^2.6.11",
     "react-dom": "^16.9.0",
     "react-responsive-simple": "^0.1.2",
     "react-router-dom": "^5.0.1",
     "react-router-hash-link": "^1.2.2",
-    "pure-react-carousel": "^1.21.2",
-    "react-scripts": "^3.1.1",
+    "spec-react-scripts": "^3.1.1",
     "styled-components": "^4.3.2"
   },
   "scripts": {
