--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "orientation-2019",
+  "name": "orientation-2020",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://spectatorpublishing.github.io/orientation-2020",
   "dependencies": {
     "@babel/core": "7.5.5",
-    "@babel/runtime": "^7.5.5",
-    "@storybook/react": "^5.1.11",
+    "@babel/runtime": "^7.11.2",
+    "@storybook/react": "^5.3.21",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
     "babel-eslint": "10.0.2",
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.3",
+    "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^9.0.1",
+    "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "^6.1.0",
-    "eslint-config-react-app": "^5.0.1",
+    "eslint": "^6.8.0",
+    "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "2.2.1",
     "eslint-plugin-flowtype": "3.13.0",
     "eslint-plugin-import": "2.18.2",
@@ -46,22 +47,22 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "prop-types": "^15.7.2",
-    "pure-react-carousel": "^1.21.2",
-    "react": "^16.9.0",
-    "react-app-polyfill": "^1.0.2",
-    "react-burger-menu": "^2.6.11",
-    "react-dev-utils": "^9.0.3",
-    "react-dom": "^16.9.0",
+    "pure-react-carousel": "^1.27.1",
+    "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
+    "react-burger-menu": "^2.7.1",
+    "react-dev-utils": "^9.1.0",
+    "react-dom": "^16.13.1",
     "react-responsive-simple": "^0.1.2",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^1.2.2",
-    "react-scripts": "^3.1.1",
+    "react-scripts": "^3.4.3",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
-    "styled-components": "^4.3.2",
+    "styled-components": "^4.4.1",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.2",
     "url-loader": "2.1.0",
@@ -115,22 +116,22 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-info": "^5.1.11",
-    "@storybook/addon-links": "^5.1.11",
-    "eslint-config-airbnb": "^18.0.1",
+    "@babel/plugin-transform-react-jsx": "^7.10.4",
+    "@storybook/addon-actions": "^5.3.21",
+    "@storybook/addon-info": "^5.3.21",
+    "@storybook/addon-links": "^5.3.21",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "lint-staged": "^9.2.3",
+    "lint-staged": "^9.5.0",
     "pre-commit": "^1.2.2",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "stylelint": "^10.1.0",
     "stylelint-config-recommended": "^2.2.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.8.0",
+    "stylelint-processor-styled-components": "^1.10.0",
     "webpack": "4.39.1"
   },
   "jest": {
